; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-scope.c_bus_scope_method_abandon.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-scope.c_bus_scope_method_abandon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"stop\00", align 1
@ESTALE = common dso_local global i32 0, align 4
@BUS_ERROR_SCOPE_NOT_RUNNING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"Scope %s is not running, cannot abandon.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bus_scope_method_abandon(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @assert(i32* %12)
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @assert(i32* %14)
  %16 = load i32*, i32** %8, align 8
  %17 = call %struct.TYPE_3__* @UNIT(i32* %16)
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @mac_selinux_unit_access_check(%struct.TYPE_3__* %17, i32* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %19)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %3
  %24 = load i32, i32* %9, align 4
  store i32 %24, i32* %4, align 4
  br label %64

25:                                               ; preds = %3
  %26 = load i32*, i32** %8, align 8
  %27 = call %struct.TYPE_3__* @UNIT(i32* %26)
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @bus_verify_manage_units_async(i32 %29, i32* %30, i32* %31)
  store i32 %32, i32* %9, align 4
  %33 = load i32, i32* %9, align 4
  %34 = icmp slt i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %25
  %36 = load i32, i32* %9, align 4
  store i32 %36, i32* %4, align 4
  br label %64

37:                                               ; preds = %25
  %38 = load i32, i32* %9, align 4
  %39 = icmp eq i32 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %37
  store i32 1, i32* %4, align 4
  br label %64

41:                                               ; preds = %37
  %42 = load i32*, i32** %8, align 8
  %43 = call i32 @scope_abandon(i32* %42)
  store i32 %43, i32* %9, align 4
  %44 = load i32, i32* %9, align 4
  %45 = load i32, i32* @ESTALE, align 4
  %46 = sub nsw i32 0, %45
  %47 = icmp eq i32 %44, %46
  br i1 %47, label %48, label %56

48:                                               ; preds = %41
  %49 = load i32*, i32** %7, align 8
  %50 = load i32, i32* @BUS_ERROR_SCOPE_NOT_RUNNING, align 4
  %51 = load i32*, i32** %8, align 8
  %52 = call %struct.TYPE_3__* @UNIT(i32* %51)
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @sd_bus_error_setf(i32* %49, i32 %50, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %54)
  store i32 %55, i32* %4, align 4
  br label %64

56:                                               ; preds = %41
  %57 = load i32, i32* %9, align 4
  %58 = icmp slt i32 %57, 0
  br i1 %58, label %59, label %61

59:                                               ; preds = %56
  %60 = load i32, i32* %9, align 4
  store i32 %60, i32* %4, align 4
  br label %64

61:                                               ; preds = %56
  %62 = load i32*, i32** %5, align 8
  %63 = call i32 @sd_bus_reply_method_return(i32* %62, i32* null)
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %61, %59, %48, %40, %35, %23
  %65 = load i32, i32* %4, align 4
  ret i32 %65
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @mac_selinux_unit_access_check(%struct.TYPE_3__*, i32*, i8*, i32*) #1

declare dso_local %struct.TYPE_3__* @UNIT(i32*) #1

declare dso_local i32 @bus_verify_manage_units_async(i32, i32*, i32*) #1

declare dso_local i32 @scope_abandon(i32*) #1

declare dso_local i32 @sd_bus_error_setf(i32*, i32, i8*, i32) #1

declare dso_local i32 @sd_bus_reply_method_return(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
